[package]
name = "rkpack"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
zip = "7"
clap = { version = "4.5.57", features = ["derive"] }
