[package]
name = "rkpack"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
zip = "7"
clap = { version = "4.5.57", features = ["derive"] }
eframe = "0.33.3"
rfd = "0.17.2"
ttf-parser = "0.25.1"
sysinfo = "0.38.1"

[package.metadata.bundle]
name = "rkpack"
identifier = "net.naari3.rkpack"
category = "public.app-category.utilities"
