[package]
name = "rkpack"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
zip = "7"
clap = { version = "4.5.57", features = ["derive"] }
eframe = "0.33.3"
rfd = { git = "https://github.com/naari3/rfd.git", branch = "master" }
ttf-parser = "0.25.1"
sysinfo = "0.38.1"
tracing = "0.1.44"
tracing-appender = "0.2.4"
dirs = "6.0.0"
chrono = "0.4.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[package.metadata.bundle]
name = "rkpack"
identifier = "net.naari3.rkpack"
category = "public.app-category.utilities"
